--- a/.github/workflows/main_practiceflight.yml
+++ b/.github/workflows/main_practiceflight.yml
@@ -21,8 +21,11 @@ jobs:
         with:
           java-version: '11'
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Update gradlew permissions
+        run: chmod +x gradlew
+        
+      - name: Build with Gradle
+        run: ./gradlew bootJar
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
