--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -53,7 +53,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        run: /.gradlew bootJar
+        run: ./gradlew bootJar
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
