--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -46,9 +46,6 @@ jobs:
           distribution: ${{ env.DISTRIBUTION }}
           cache: 'gradle'
           
-      - name: Verify Gradle Version
-        run: gradle --version
-          
       - name: Update gradlew permissions
         run: chmod +x gradlew
 
@@ -59,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/build/libs/*.jar'
 
   deploy:
     permissions:
